--- a/.github/workflows/main_nodejs-backenddd.yml
+++ b/.github/workflows/main_nodejs-backenddd.yml
@@ -25,12 +25,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd Nodejs-backend
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: cd Nodejs-backend && zip -r ../release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
