--- a/Nodejs-backend/package.json
+++ b/Nodejs-backend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "build": "echo 'No build step for backend'",
     "dev": "nodemon server.js"
   },
   "dependencies": {
